@@ -18,8 +18,12 @@
  */
 package org.apache.causeway.extensions.commandlog.applib.dom.replay;
 
+import java.sql.Timestamp;
+import java.time.Instant;
+import java.time.chrono.ChronoZonedDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import jakarta.inject.Inject;
 import jakarta.inject.Named;
@@ -32,10 +36,15 @@ import org.apache.causeway.applib.annotation.CollectionLayout;
 import org.apache.causeway.applib.annotation.DomainObject;
 import org.apache.causeway.applib.annotation.DomainObjectLayout;
 import org.apache.causeway.applib.annotation.Introspection;
+import org.apache.causeway.applib.annotation.MemberSupport;
 import org.apache.causeway.applib.annotation.ObjectSupport;
+import org.apache.causeway.applib.annotation.ParameterLayout;
+import org.apache.causeway.applib.annotation.Property;
+import org.apache.causeway.applib.annotation.PropertyLayout;
+import org.apache.causeway.applib.annotation.Publishing;
+import org.apache.causeway.applib.annotation.RestrictTo;
 import org.apache.causeway.applib.annotation.SemanticsOf;
 import org.apache.causeway.applib.util.schema.CommandDtoUtils;
-import org.apache.causeway.applib.value.Blob;
 import org.apache.causeway.applib.value.Clob;
 import org.apache.causeway.applib.value.NamedWithMimeType.CommonMimeType;
 import org.apache.causeway.extensions.commandlog.applib.CausewayModuleExtCommandLogApplib;
@@ -43,32 +52,86 @@ import org.apache.causeway.extensions.commandlog.applib.dom.CommandLogEntry;
 import org.apache.causeway.extensions.commandlog.applib.dom.CommandLogEntryRepository;
 import org.apache.causeway.extensions.commandlog.applib.dom.ReplayState;
 
+import static org.apache.causeway.extensions.commandlog.applib.dom.replay.TimestampMarshallUtil.fromString;
+
 @DomainObject(introspection = Introspection.ANNOTATION_REQUIRED)
 @DomainObjectLayout(cssClassFa = "solid share-from-square")
 @Named(CommandExportManager.LOGICAL_TYPE_NAME)
 public record CommandExportManager(
+        @Property
+        @PropertyLayout(describedAs = "Only commands since this timestamp are available for export")
+        java.sql.Timestamp since,
         ReplayContext replayContext) implements ViewModel {
 
-    public static final String LOGICAL_TYPE_NAME = CausewayModuleExtCommandLogApplib.NAMESPACE + ".CommandExportManager";
+	public static final String LOGICAL_TYPE_NAME = CausewayModuleExtCommandLogApplib.NAMESPACE + ".CommandExportManager";
+
+    public static abstract class ActionDomainEvent<T>
+            extends CausewayModuleExtCommandLogApplib.ActionDomainEvent<T> { }
 
     @Inject
     public CommandExportManager(
             final String memento,
             final ReplayContext replayContext) {
-        this(replayContext);
+        this(   fromString(memento, replayContext.clockService().getClock().nowAsJavaSqlTimestamp()),
+                replayContext);
     }
 
     @ObjectSupport public String title() {
         return "Command Export Manager";
     }
 
-    @Action(semantics = SemanticsOf.IDEMPOTENT_ARE_YOU_SURE)
+    @Action(
+            semantics = SemanticsOf.SAFE,
+            commandPublishing = Publishing.DISABLED,
+            domainEvent = previousHour.DomainEvent.class,
+            executionPublishing = Publishing.DISABLED)
     @ActionLayout(
-            sequence = "0.1",
-            describedAs = "Deletes all commands, regardless of state (cannot be undone)")
-    public CommandExportManager deleteAll() {
-        commandLogEntryRepository().removeAll();
-        return this;
+            associateWith = "since", sequence = "1",
+            named = "Previous",
+            position = ActionLayout.Position.PANEL,
+            describedAs = "Move back one hour")
+    public class previousHour {
+        public class DomainEvent extends ActionDomainEvent<previousHour> { }
+        @MemberSupport public CommandExportManager act() {
+            return new CommandExportManager(addSeconds(since, -3600), replayContext);
+        }
+    }
+
+    @Action(
+            semantics = SemanticsOf.SAFE,
+            commandPublishing = Publishing.DISABLED,
+            domainEvent = nextHour.DomainEvent.class,
+            executionPublishing = Publishing.DISABLED)
+    @ActionLayout(
+            associateWith = "since", sequence = "3",
+            named = "Next",
+            position = ActionLayout.Position.PANEL,
+            describedAs = "Move forward one hour")
+    public class nextHour {
+        public class DomainEvent extends ActionDomainEvent<nextHour> { }
+        @MemberSupport public CommandExportManager act() {
+            return new CommandExportManager(addSeconds(since, +3600), replayContext);
+        }
+    }
+
+    @Action(
+            restrictTo = RestrictTo.PROTOTYPING,
+            semantics = SemanticsOf.SAFE,
+            commandPublishing = Publishing.DISABLED,
+            domainEvent = changeSince.DomainEvent.class,
+            executionPublishing = Publishing.DISABLED)
+    @ActionLayout(
+            associateWith = "since", sequence = "2",
+            named = "Change",
+            position = ActionLayout.Position.PANEL)
+    public class changeSince {
+        public class DomainEvent extends ActionDomainEvent<nextHour> { }
+        @MemberSupport public CommandExportManager act(final java.sql.Timestamp since) {
+            return new CommandExportManager(since, replayContext);
+        }
+        @MemberSupport public java.sql.Timestamp defaultSince() {
+            return CommandExportManager.this.since;
+        }
     }
 
     // -- NOT YET EXPORTED
@@ -77,95 +140,138 @@ public record CommandExportManager(
     @CollectionLayout(
             describedAs = "Commands that can be exported")
     public List<ReplayableCommand> getNotYetExported() {
-        return commandLogEntryRepository().findAll().stream()
-            .filter(entry->ReplayState.canExport(entry.getReplayState()))
+        return commandLogEntryRepository().findForegroundSinceTimestampAndCanBeExported(since).stream()
             .map(entry->new ReplayableCommand(
                     entry.getInteractionId(),
                     replayContext))
-            .toList();
+            .collect(Collectors.toList());
     }
 
-    @Action(choicesFrom = "notYetExported", semantics = SemanticsOf.NON_IDEMPOTENT)
-    @ActionLayout(associateWith = "notYetExported",
-        sequence = "1.1",
-        cssClassFa = "solid share-from-square",
-        cssClass = "btn-primary",
-        describedAs = "Exports selected Commands as zipped DTOs for import later. "
-                + "(You need to refresh the page to see changed states.)")
-    public Blob exportSelected(
-            final List<ReplayableCommand> selected) {
+    @Action(
+            restrictTo = RestrictTo.PROTOTYPING,
+            choicesFrom = "notYetExported",
+            semantics = SemanticsOf.NON_IDEMPOTENT,
+            commandPublishing = Publishing.DISABLED,
+            domainEvent = exportSelected.DomainEvent.class,
+            executionPublishing = Publishing.DISABLED)
+    @ActionLayout(
+            associateWith = "notYetExported", sequence = "1.1",
+            cssClassFa = "solid share-from-square",
+            cssClass = "btn-primary",
+            describedAs = "Exports selected Commands as zipped DTOs for import later. "
+                        + "Refresh the page to see changed states.")
+    public class exportSelected {
+        public class DomainEvent extends ActionDomainEvent<exportSelected> { }
+        @MemberSupport public Clob act(
+                final List<ReplayableCommand> selected,
+                @ParameterLayout(describedAs = "File name for the exported file." )
+                final String filenamePrefix,
+                @ParameterLayout(describedAs = "Whether to add a timestamp suffix to the exported file's name." )
+                final boolean filenameTimestamp,
+                @ParameterLayout(describedAs = "Whether to use the multi-doc YAML format to represent a collection of "
+                        + "CommandDto entries. "
+                        + "If unchecked uses the YAML list format. "
+                        + "(Command Replay Manager's import understands both formats.)" )
+                final boolean multiDocFormat) {
 
-        var selectedCommandLogEntries = selected.stream()
-            .map(ReplayableCommand::commandLogEntry)
-            .filter(Optional::isPresent)
-            .map(Optional::get)
-            .sorted()
-            .toList();
-
-        var yaml = CommandDtoUtils.toMultiDocYaml(
-            selectedCommandLogEntries.stream()
-                .filter(entry->!ReplayState.isExported(entry.getReplayState()))
+            var selectedCommandLogEntries = selected.stream()
+                .map(ReplayableCommand::commandLogEntry)
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .filter(entry->!ReplayState.isExported(entry.getReplayState())) // shouldn't be necessary unless a race condition
+                .sorted()
+                .toList();
+            var selectedCommandDtos = selectedCommandLogEntries.stream()
                 .map(CommandLogEntry::getCommandDto)
-                .toList());
+                .toList();
 
-        var blob = Clob.of("commands.yaml", CommonMimeType.YAML, yaml)
-                .toBlobUtf8()
-                .zip();
+            var yaml = multiDocFormat
+                    ? CommandDtoUtils.toMultiDocYaml(selectedCommandDtos)
+                    : CommandDtoUtils.toYaml(selectedCommandDtos);
 
-        // do this last once we have successfully created the Clob
-        selectedCommandLogEntries.forEach(c->c.setReplayState(ReplayState.EXPORTED));
+            var replayableCommand = selected.get(0);  // validate ensures there is at least one command
+            var timestamp = filenameTimestamp
+                    ? replayableCommand.getTimestampIfAny()
+                        .map(ChronoZonedDateTime::toInstant)
+                        .map(Instant::toString)
+                        .map(x -> "." + x.replaceAll("[^A-Za-z0-9._-]", "_"))   // make safe within filename
+                        .orElse("")
+                    : "";
+            var filename = filenamePrefix + timestamp;
 
-        return blob;
-    }
+            var clob = Clob.of(filename, CommonMimeType.YAML, yaml);
 
-    @Action(choicesFrom = "notYetExported")
-    @ActionLayout(associateWith = "notYetExported", sequence = "1.2",
-            describedAs = "Deletes selected Commands (cannot be undone)")
-    public CommandExportManager deleteSelected(final List<ReplayableCommand> selected) {
-        selected.stream()
-            .forEach(ReplayableCommand::delete); // filtered on its own responsibility
-        return this;
+            // do this last once we have successfully created the Clob
+            selectedCommandLogEntries.forEach(c->c.setReplayState(ReplayState.EXPORTED));
+
+            return clob;
+        }
+        @MemberSupport public String disableAct() {
+            return getNotYetExported().isEmpty() ? "No commands in collection" : null;
+        }
+        @MemberSupport public String defaultFilenamePrefix() {
+            return "commands";
+        }
+        @MemberSupport public boolean defaultFilenameTimestamp() {
+            return true;
+        }
+        @MemberSupport public boolean defaultMultiDocFormat() {
+            return true;
+        }
+        @MemberSupport public String validateSelected(final List<ReplayableCommand> selected) {
+            return selected != null
+                    && selected.isEmpty()
+                ? "Select at least one command to export"
+                : null;
+        }
     }
 
     // -- EXPORTED
 
     @Collection
-    @CollectionLayout(
-            describedAs = "Commands that were exported")
+    @CollectionLayout(describedAs = "Commands that have been exported")
     public List<ReplayableCommand> getExported() {
-        return commandLogEntryRepository().findAll().stream()
-            .filter(entry->ReplayState.isExported(entry.getReplayState()))
+        return commandLogEntryRepository().findForegroundSinceTimestampAndHasBeenExported(since).stream()
             .map(entry->new ReplayableCommand(
                     entry.getInteractionId(),
                     replayContext))
-            .toList();
+            .collect(Collectors.toList());
     }
 
-    @Action(choicesFrom = "exported")
-    @ActionLayout(associateWith = "exported", sequence = "2.1",
+    @Action(
+            restrictTo = RestrictTo.PROTOTYPING,
+            choicesFrom = "exported",
+            commandPublishing = Publishing.DISABLED,
+            semantics =  SemanticsOf.IDEMPOTENT,
+            domainEvent = makeSelectedExportable.DomainEvent.class,
+            executionPublishing = Publishing.DISABLED)
+    @ActionLayout(
+            associateWith = "exported", sequence = "2.1",
             describedAs = "Makes selected Commands exportable (again)")
-    public CommandExportManager makeSelectedExportable(final List<ReplayableCommand> selected) {
-        selected.stream()
-            .forEach(ReplayableCommand::makeExportable); // filtered on its own responsibility
-        return this;
-    }
-
-    @Action(choicesFrom = "exported")
-    @ActionLayout(associateWith = "exported", sequence = "2.2",
-            named = "Delete Selected",
-            describedAs = "Deletes selected Commands (cannot be undone)")
-    public CommandExportManager deleteSelected2(final List<ReplayableCommand> selected) {
-        selected.stream()
-            .forEach(ReplayableCommand::delete); // filtered on its own responsibility
-        return this;
+    public class makeSelectedExportable {
+        public class DomainEvent extends ActionDomainEvent<makeSelectedExportable> { }
+        @MemberSupport public CommandExportManager act(final List<ReplayableCommand> selected) {
+            selected.forEach(ReplayableCommand::makeExportable); // filtered on its own responsibility
+            return CommandExportManager.this;
+        }
+        @MemberSupport public String disableAct() {
+            return getExported().isEmpty()
+                ? "No commands in collection"
+                : null;
+        }
+        @MemberSupport public String validateSelected(final List<ReplayableCommand> selected) {
+            return selected != null
+                    && selected.isEmpty()
+                ? "Select at least one command"
+                : null;
+        }
     }
 
     // -- VM STATE
 
     @Override
     public String viewModelMemento() {
-        // TODO could use to store filter state
-        return null;
+        return TimestampMarshallUtil.toString(this.since);
     }
 
     // -- HELPER
@@ -174,4 +280,7 @@ public record CommandExportManager(
         return replayContext.commandLogEntryRepository();
     }
 
+    private static Timestamp addSeconds(final Timestamp since, final int secondsToAdd) {
+        return Timestamp.from(since.toInstant().plusSeconds(secondsToAdd));
+    }
 }
